Validation implemented with POJO (Plain Old Java Object)

--- a/flink-consumer/pom.xml
+++ b/flink-consumer/pom.xml
@@ -22,27 +22,32 @@
 
     <dependencies>
         <!-- ===== FLINK CORE DEPENDENCIES ===== -->
-        <!-- These are typically marked as 'provided' because they exist in the Flink cluster -->
+        <!-- CAMBIO 1: Quitamos 'provided' solo de flink-streaming-java -->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java</artifactId>
             <version>${flink.version}</version>
-            <scope>provided</scope>
+            <!-- SIN 'provided' para desarrollo en VSCode -->
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-clients</artifactId>
             <version>${flink.version}</version>
-            <scope>provided</scope>
+            <scope>provided</scope> <!-- Este sí puede quedarse como provided -->
         </dependency>
 
         <!-- ===== CONNECTORS & FORMATS ===== -->
-        <!-- Correct Kafka connector version [citation:5] -->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka</artifactId>
             <version>${flink.connector.kafka.version}</version>
-            <!-- Do not set as 'provided' if you package the job as a standalone JAR -->
+        </dependency>
+
+        <!-- CAMBIO 2: Agregamos Avro explícitamente (la causa del error rojo) -->
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.11.3</version>
         </dependency>
 
         <!-- Avro format support -->
@@ -53,13 +58,11 @@
         </dependency>
 
         <!-- ===== CONFLUENT & SERIALIZATION ===== -->
-        <!-- Confluent Schema Registry Avro serializer -->
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-avro-serializer</artifactId>
             <version>7.5.0</version>
             <exclusions>
-                <!-- Often necessary to avoid version conflicts with Flink's internal Kafka client -->
                 <exclusion>
                     <groupId>org.apache.kafka</groupId>
                     <artifactId>kafka-clients</artifactId>
@@ -68,7 +71,6 @@
         </dependency>
 
         <!-- ===== LOGGING ===== -->
-        <!-- SLF4J binding for simple output (use only for local testing) -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
@@ -84,12 +86,10 @@
     </dependencies>
 
     <repositories>
-        <!-- Repository for Confluent dependencies (like kafka-avro-serializer) -->
         <repository>
             <id>confluent</id>
             <url>https://packages.confluent.io/maven/</url>
         </repository>
-        <!-- Maven Central is included by default, no need to re-declare -->
     </repositories>
 
     <build>
@@ -120,7 +120,6 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <filters>
                                 <filter>
-                                    <!-- Exclude signature files to avoid security warnings -->
                                     <artifact>*:*</artifact>
                                     <excludes>
                                         <exclude>META-INF/*.SF</exclude>
@@ -130,9 +129,7 @@
                                 </filter>
                             </filters>
                             <transformers>
-                                <!-- Merge service files (important for connectors) -->
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                                <!-- Set the main class for your application -->
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.example.flink.PropertyEventConsumer</mainClass>
                                 </transformer>
